# excel_para_gcp_storage

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/workflows/: CI.yml
1_visao_geral/: index.html
2_airflow/: index.html
app/: etl.py  main.py  schema.py
dags/: main.py
docs/: 2_airflow.md  index.md
orquestracao/: index.html
search/: search_index.json
tests/: exemplo.xlsx  test_extracao.py  test_leitura_dados.py  test_tratar_dados.py
