[project]
name = "excel-para-gcp-storage"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi",email = "davifpereira@yahoo.com.br"}
]
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "poetry-plugin-dotenv (>=2.9.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandera (>=0.23.1,<0.24.0)",
    "google-cloud-bigquery (>=3.31.0,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "apache-airflow (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "excel_para_gcp_storage", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
poetry run python app/main.py
"""
doc = "mkdocs serve"

[tool.pytest.ini_options]
pythonpath = ["app"]